bitwarden/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitwarden
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: bitwarden
  template:
    metadata:
      labels:
        app: bitwarden
    spec:
      containers:
        - name: bitwarden
          image: ghcr.io/dani-garcia/vaultwarden:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /data
              name: bitwarden-storage
      volumes:
        - name: bitwarden-storage
          persistentVolumeClaim:
            claimName: bitwarden-pvc
