bitwarden/service.yml
apiVersion: v1
kind: Service
metadata:
  name: bitwarden-service
spec:
  selector:
    app: bitwarden
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
