bitwarden/ingress.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bitwarden-route
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: main
      namespace: gateway
  hostnames:
    - vault.pmh.codes
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: bitwarden-service
          port: 80
